--- a/MySwift/Feature/EmbededView/ChildView2/ChildView2.xib
+++ b/MySwift/Feature/EmbededView/ChildView2/ChildView2.xib
@@ -1,10 +1,107 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="2vN-4S-i07" customClass="ChildView2" customModule="MySwift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="412" height="657"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2l-Pl-wDb">
+                    <rect key="frame" x="160" y="303" width="92" height="51"/>
+                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="51" id="dtp-Ni-QeV"/>
+                        <constraint firstAttribute="width" constant="92" id="pRF-zj-78J"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Hitung" buttonSize="large">
+                        <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="proses:" destination="2vN-4S-i07" eventType="touchUpInside" id="6Ra-iO-Fxy"/>
+                    </connections>
+                </button>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pyv-4j-X9r">
+                    <rect key="frame" x="28" y="59" width="356" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="eaH-OI-dAv"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K5e-xi-9mk">
+                    <rect key="frame" x="28" y="101" width="356" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="xBr-x5-MB2"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enk-yy-Lxz">
+                    <rect key="frame" x="29" y="167" width="305" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcn-bj-vfQ">
+                    <rect key="frame" x="138" y="382" width="136" height="51"/>
+                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="136" id="GHA-Vg-OWY"/>
+                        <constraint firstAttribute="height" constant="51" id="jpz-Va-di8"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Kembali" buttonSize="large">
+                        <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="navigasi:" destination="2vN-4S-i07" eventType="touchUpInside" id="Pk1-Up-aT1"/>
+                    </connections>
+                </button>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="NL2-g6-pGU"/>
+            <color key="backgroundColor" systemColor="systemBlueColor"/>
+            <constraints>
+                <constraint firstItem="enk-yy-Lxz" firstAttribute="top" secondItem="K5e-xi-9mk" secondAttribute="bottom" constant="32" id="6lO-5g-38H"/>
+                <constraint firstItem="d2l-Pl-wDb" firstAttribute="centerX" secondItem="K5e-xi-9mk" secondAttribute="centerX" id="9o6-CY-TQp"/>
+                <constraint firstItem="K5e-xi-9mk" firstAttribute="leading" secondItem="NL2-g6-pGU" secondAttribute="leading" constant="28" id="Mcd-L5-5Ux"/>
+                <constraint firstItem="NL2-g6-pGU" firstAttribute="trailing" secondItem="enk-yy-Lxz" secondAttribute="trailing" constant="78" id="QUl-VI-brA"/>
+                <constraint firstItem="K5e-xi-9mk" firstAttribute="top" secondItem="Pyv-4j-X9r" secondAttribute="bottom" constant="8" symbolic="YES" id="SdR-T3-9X4"/>
+                <constraint firstItem="NL2-g6-pGU" firstAttribute="trailing" secondItem="K5e-xi-9mk" secondAttribute="trailing" constant="28" id="Vxk-eY-zBV"/>
+                <constraint firstItem="NL2-g6-pGU" firstAttribute="trailing" secondItem="Pyv-4j-X9r" secondAttribute="trailing" constant="28" id="YuL-bl-c7B"/>
+                <constraint firstItem="enk-yy-Lxz" firstAttribute="leading" secondItem="NL2-g6-pGU" secondAttribute="leading" constant="29" id="hFT-xA-cpb"/>
+                <constraint firstItem="Pyv-4j-X9r" firstAttribute="leading" secondItem="NL2-g6-pGU" secondAttribute="leading" constant="28" id="jjo-EK-YFH"/>
+                <constraint firstItem="d2l-Pl-wDb" firstAttribute="centerY" secondItem="2vN-4S-i07" secondAttribute="centerY" id="kKa-L1-dpt"/>
+                <constraint firstItem="gcn-bj-vfQ" firstAttribute="centerX" secondItem="d2l-Pl-wDb" secondAttribute="centerX" id="lIA-Ob-eke"/>
+                <constraint firstItem="K5e-xi-9mk" firstAttribute="top" secondItem="2vN-4S-i07" secondAttribute="top" constant="101" id="tJy-h0-YJa"/>
+                <constraint firstItem="gcn-bj-vfQ" firstAttribute="top" secondItem="d2l-Pl-wDb" secondAttribute="bottom" constant="28" id="yUL-Cl-87r"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="input1" destination="Pyv-4j-X9r" id="8qj-YY-Rrz"/>
+                <outlet property="input2" destination="K5e-xi-9mk" id="SGa-aD-LFs"/>
+                <outlet property="label" destination="enk-yy-Lxz" id="0I9-xP-Xfj"/>
+            </connections>
+            <point key="canvasLocation" x="137.40458015267174" y="-296.12676056338029"/>
+        </view>
     </objects>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
