--- a/MySwift/Feature/EmbededView/EmbededView.xib
+++ b/MySwift/Feature/EmbededView/EmbededView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmbededView" customModule="ForTest" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmbededView" customModule="MySwift" customModuleProvider="target">
             <connections>
                 <outlet property="ChildViewContainer" destination="ylC-NT-1og" id="6hV-Vb-35B"/>
                 <outlet property="view" destination="t0f-cp-Vqg" id="y0u-cJ-Hw1"/>
@@ -20,18 +20,36 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ylC-NT-1og">
-                    <rect key="frame" x="16" y="163" width="361" height="594"/>
+                    <rect key="frame" x="16" y="162" width="361" height="595"/>
                     <color key="backgroundColor" systemColor="systemCyanColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="361" id="X3H-Rv-he6"/>
-                        <constraint firstAttribute="height" constant="594" id="rOg-CO-cmG"/>
+                        <constraint firstAttribute="height" constant="595" id="rOg-CO-cmG"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2V2-9i-C3y">
+                    <rect key="frame" x="16" y="106" width="116" height="35"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Child View 1"/>
+                    <connections>
+                        <action selector="childView1:" destination="-1" eventType="touchUpInside" id="9zD-W6-Ls8"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yT-Sw-M62">
+                    <rect key="frame" x="164" y="105" width="119" height="35"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Child View 2"/>
+                    <connections>
+                        <action selector="childView2:" destination="-1" eventType="touchUpInside" id="Chx-DI-xHC"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="qgc-AA-tel"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="ylC-NT-1og" firstAttribute="top" secondItem="qgc-AA-tel" secondAttribute="top" constant="104" id="N5B-k1-DoI"/>
+                <constraint firstItem="ylC-NT-1og" firstAttribute="top" secondItem="qgc-AA-tel" secondAttribute="top" constant="103" id="N5B-k1-DoI"/>
                 <constraint firstItem="ylC-NT-1og" firstAttribute="leading" secondItem="qgc-AA-tel" secondAttribute="leading" constant="16" id="ZGb-pd-w8w"/>
                 <constraint firstItem="qgc-AA-tel" firstAttribute="trailing" secondItem="ylC-NT-1og" secondAttribute="trailing" constant="16" id="mKf-PB-u9m"/>
                 <constraint firstItem="qgc-AA-tel" firstAttribute="bottom" secondItem="ylC-NT-1og" secondAttribute="bottom" constant="61" id="wRc-pP-3pN"/>
@@ -44,7 +62,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemCyanColor">
-            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
